# global

./: Makefile.am  configure.ac  convert.pl
global/: Makefile.am  global.c
gtags/: Makefile.am  gtags.c
libparser/: .gitignore  Makefile.am  erl_parse_interface.c  internal.h  parse.erl  parser.c  parser.h  reserved.pl  test.erl
